# sample-qt

./: CMakeLists.txt  README.md  main.cpp
cmake/: gtest.cmake  qt5.cmake  yocto-qt5-toolchain.cmake
fwk/: DataReader.cpp  DataReader.h  HelloWorld.cpp  HelloWorld.h
src/: MainWindow.cpp  MainWindow.h  Soundex.cpp  Soundex.h
test/: CMakeLists.txt  DataReaderTest.cpp  HelloWorldTest.cpp  Makefile  ProtocolDecoder.cpp  SoundexTest.cpp
